add simple File API

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 something html5 like widget.
 
-now only range is html5.
 my color picker is not html5.
+
+I tested only Windows Chrome.if there are contributer I will support others.
+but maybe official would support all platform.
