--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 something html5 like widget.
 
-my color picker is not html5.
-
+File API - only readAsText()
+Range Widget
+color pick - not html5
+----
 I tested only Windows Chrome.if there are contributer I will support others.
 but maybe official would support all platform.
