--- a/README
+++ b/README
@@ -1,11 +1,15 @@
 something html5 like widget.
 
-File API - only readAsText()
+File API - only readAsText(),readAsDataURl()
+File Download API
 Range Widget
 color pick - not html5
 ----
 I tested only Windows Chrome.if there are contributer I will support others.
 but maybe official would support all platform.
+
+Release 
+r4 - akjavahtml5gwt_120214.jar
 
 BUG
 range widget don't fire event when setValue() called.
