--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 something html5 like widget.
 
-File API - only readAsText(),readAsDataURl(), this works Chrome & Firefox 12,not works any IE yet
+File API - support readAsText(),readAsDataURl(),readAsArrayBuffer(), this works Chrome & Firefox 12,not works any IE yet
 File Download API,this works only Chrome
 Range Widget,this works only Chrome
 color pick - not html5
